<resources>
    <string name="app_name">Show Casing</string>
    <string name="category_name">Category Name</string>
    <string name="text_more">More</string>
    <string name="text_view_all">View All</string>
    <string name="text_default_product_name">Product Name</string>
    <string name="tab_home">Home</string>
    <string name="tab_brand_new">Brand New</string>
    <string name="tab_popular">Popular</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_home">Home</string>
    <string name="nav_language">Language</string>
    <string name="nav_store_locator">Store Locator</string>
    <string name="nav_announcement">Announcement</string>
    <string name="nav_offers">Offers</string>
    <string name="nav_purchases">Purchases</string>
    <string name="text_store_location">Store Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="text_view_detail">View Detail</string>
    <string name="text_product_list">Show Product List</string>
    <string name="text_search">Search</string>
    <string name="text_no_result">No Result Found</string>
    <string name="settings">Settings</string>
    <string name="permission_msg_location">Provide location permission</string>

    <string name="button_save">Save</string>
    <string name="tv_bangla">বাংলা</string>
    <string name="tv_english">English</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_language_selection">Language</string>
    <string name="btn_show_room">Show room</string>
    <string name="toast_location_permision_denied">The app was not allowed to find your location. Please consider granting it this permission</string>
    <string name="title_activity_product_detail">Product Detail</string>
    <string name="description">With a layer of austere vanilla cream sandwiched between two finely baked chocolate cakes, we serve you our prêt-à-porter Chocolate Layer Cake.</string>
    <string name="text_specification">Spacification</string>
    <string name="text_related_product_title">Product related to this item</string>
    <string name="action_share">Share</string>
    <string name="action_favourite">Favourite</string>
    <string name="text_product_image">Product Images</string>
    <string name="text_select_product_packages">Select packages</string>

    <string-array name="language">
        <item>English</item>
        <item>বাংলা</item>
    </string-array>

    <string-array name="locality">
        <item>en</item>
        <item>bn</item>
    </string-array>

    <string-array name="country">
        <item>US</item>
        <item>BD</item>
    </string-array>

</resources>
