<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_bangla"
        android:layout_width="match_parent"
        android:layout_height="?listPreferredItemHeight"
        android:background="@android:color/white"
        android:drawableRight="@drawable/language_circular_button"
        android:paddingLeft="@dimen/tv_language_padding_left"
        android:paddingRight="@dimen/tv_language_padding_left"
        android:gravity="center_vertical|left"
        android:text="@string/tv_bangla" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider_language" />

    <TextView
        android:id="@+id/tv_english"
        android:layout_width="match_parent"
        android:layout_height="?listPreferredItemHeight"
        android:background="@android:color/white"
        android:drawableRight="@drawable/language_circular_button"
        android:paddingLeft="@dimen/tv_language_padding_left"
        android:paddingRight="@dimen/tv_language_padding_left"
        android:gravity="center_vertical|left"
        android:text="@string/tv_english" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="?listPreferredItemHeightSmall"
        android:background="@drawable/language_button_save"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/button_save" />

</LinearLayout>
